# LogPilotMac

./: README.md
.github/workflows/: branch-auto-release.yml
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
ui/: app.js  index.html  styles.css
