[package]
name = "lockpilot"
version = "0.4.10"
description = "macOS timer actions app"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde", "clock"] }
uuid = { version = "1", features = ["v4", "serde"] }
reqwest = { version = "0.12", default-features = false, features = ["blocking", "json", "rustls-tls"] }
semver = "1"

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]
